--- a/src/components/SpeedIndicator/SpeedIndicator.css
+++ b/src/components/SpeedIndicator/SpeedIndicator.css
@@ -12,3 +12,11 @@
 .counterText {
   fill: rgb(255, 255, 255); font-size: 50px;
 }
+
+#chart {
+  position: relative;
+}
+
+.driveStates {
+  position: absolute;
+}
