--- a/src/components/SpeedIndicator/SpeedIndicator.css
+++ b/src/components/SpeedIndicator/SpeedIndicator.css
@@ -10,10 +10,11 @@
 }
 
 .counterText {
-  fill: rgb(255, 255, 255); font-size: 60px;
+  fill: rgb(255, 255, 255); font-size: 80px;
+  font-weight: 700;
 }
 
-.tipText {
+.mphText {
   fill: rgb(255, 255, 255); font-size: 20px;
   transform: translateY(40px);
 }
@@ -25,4 +26,21 @@
 
 .driveStates {
   position: absolute;
+}
+
+#driveCont {
+  position: absolute;
+}
+
+.labelText {
+  position: absolute;
+  fill: rgb(129, 129, 129);
+  font-size: 10px;
+}
+
+.topText {
+  position: absolute;
+  fill: rgb(212, 212, 212);
+  font-size: 13px;
+  font-weight: 500;
 }
